deployments/631930277/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  selector:
    app: foo
  ports:
    - port: 80
      name: web
      targetPort: web
