deployments/631930277/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
spec:
  rules:
    - host: 631930277.preview.771.blue
      http:
        paths:
          - backend:
              service:
                name: foo
                port:
                  name: web
            pathType: Prefix
            path: /
